fixed some spacing issues

--- a/assets/styles/landing.css
+++ b/assets/styles/landing.css
@@ -85,17 +85,22 @@ a:hover {
 
 #left {
     position: absolute;
-    left: -5%;
-    width: 60%;
+    left: -2%;
+    width: 57%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* margin-right: 30px; */
 }
 
 #right {
-    width: 40%;
+    position: absolute;
+    width: 43%;
+    height: 70%;
+    right: 0%;
+    bottom: 0%;
 }
 
 #firstname, #lastname {
@@ -103,7 +108,7 @@ a:hover {
     font-family: 'ITC Avant Garde Gothic Std Bold';
     /* font-style: normal;
     font-weight: normal; */
-    font-size: 310px;
+    font-size: 18.25vw;
     /* color: #2F489F; */
     color: #4054A3;
     /* color: #49458F; */
@@ -124,11 +129,13 @@ a:hover {
 #swe {
     font-family: 'ITC Avant Garde Gothic Std Bold';
     font-style: normal;
-    font-size: 85px;
+    /* font-size: 85px; */
+    font-size: 5vw;
     color: black;
     width: 100%;
     height: 30%;
     margin: 0px;
+    margin-right: 1vw;
     text-align: right;
 }
 
@@ -136,10 +143,12 @@ a:hover {
     font-family: 'ITC Avant Garde Gothic Std Medium';
     font-style: normal;
     font-weight: normal;
-    font-size: 40px;
+    /* font-size: 40px; */
+    font-size: 2.4vw;
     position: absolute;
-    top: 657px;
-    right: 198px;
+    bottom: -10%;
+    /* right: 12vw; */
+    right: 28%;
     margin: 0px;
 }
 
